feat(auth): add register && auth
